--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,4 +5,8 @@
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-ZMK_KEYBOARD_NAME="Corne-fi"
+if SHIELD_CORNE_LEFT
+
+	ZMK_KEYBOARD_NAME="Corne-fi"
+
+endif
