--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,3 +3,7 @@
 # CONFIG_WS2812_STRIP=y
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
